--- a/Responsive-Web-Design/Colored-Markers/styles.css
+++ b/Responsive-Web-Design/Colored-Markers/styles.css
@@ -6,5 +6,16 @@ h1 {
   width: 200px;
   height: 25px;
   margin: 10px auto;
+}
+
+.one {
   background-color: red;
+}
+
+.two {
+  background-color: green;
+}
+
+.three {
+  background-color: blue;
 }
